# fyp_ws

./: CMakeLists.txt  frames_2024-07-27_11.12.00.gv  frames_2024-08-04_00.35.29.gv  frames_2024-08-04_02.02.12.gv  frames_2024-08-04_19.52.54.gv  package.xml
install/: local_setup.sh  setup.sh
install/fyp_ws/lib/fyp_ws/: example_diff_drive  keyboard_control
install/fyp_ws/share/ament_index/resource_index/package_run_dependencies/: fyp_ws
install/fyp_ws/share/ament_index/resource_index/parent_prefix_path/: fyp_ws
install/fyp_ws/share/fyp_ws/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fyp_ws/share/fyp_ws/cmake/: fyp_wsConfig-version.cmake  fyp_wsConfig.cmake
install/fyp_ws/share/fyp_ws/config/: bridge_config.yaml  controller.yaml  diff_drive_controller_velocity.yaml
install/fyp_ws/share/fyp_ws/environment/: ament_prefix_path.dsv  path.dsv
install/fyp_ws/share/fyp_ws/launch/: diff_drive_example.launch.py  dodobot.launch.py  dodobot_outdoor.launch.py
install/fyp_ws/share/fyp_ws/rviz/: robot_lidar.rviz
install/fyp_ws/share/fyp_ws/urdf/: dodobot.urdf.xacro  test_diff_drive.urdf.xacro  test_diff_drive.xacro.urdf
install/fyp_ws/share/fyp_ws/worlds/: my_world.sdf  outdoor.sdf
log/: latest_build
src/config/: bridge_config.yaml  controller.yaml
src/examples/: keyboard_control.cpp
src/launch/: dodobot.launch.py  dodobot_outdoor.launch.py
src/rviz/: robot_lidar.rviz
src/urdf/: dodobot.urdf.xacro
src/worlds/: my_world.sdf  outdoor.sdf
